Revision history for {{$dist->name}}

{{$NEXT}}
  [Toolchain]
  - Improved dist.ini.

v0.8.1    2024-07-15 13:23:22+01:00 Europe/London
  [Bug Fixes]
  - Specified a minimum version of Cache::FastMmap.

  [Documentation]
  - Add a note that the cache must be shared between processes.

v0.8.0    2024-07-13 15:57:30+01:00 Europe/London
  [Incompatible Changes]
  - Minimum Perl version is v5.20.

  [Enhancements]
  - Internal code was changed to use newer Perl syntax features.

  [Documentation]
  - Update copyright year.

v0.7.2    2023-12-22 10:00:50+00:00 Europe/London
  [Tests]
  - Removed TAP::Formatter::GitHubActions from prerequisites.

  [Other]
  - Perltidied source code.

  [Toolchain]
  - Added .editorconfig to the repository.

  - Added .perltidyrc to the repository.

v0.7.1    2023-12-21 13:20:19+00:00 Europe/London
  [Bug Fixes]
  - Fixed initialisation of the default configuration.

  [Tests]
  - Renamed a test script.

v0.7.0    2023-12-13 18:19:27+00:00 Europe/London
  [Toolchain]
  - Build rules were updated to ensure MANIFEST.SKIP is used.

v0.6.1    2023-12-12 17:14:50+00:00 Europe/London (TRIAL RELEASE)
  [Enhancements]
  - Added `callback` attribute to override logging method.

v0.6.0    2023-12-05 11:12:59+00:00 Europe/London
  [Enhancements]
  - Added support for IPv6 addresses. (GH#6)

  - Added `cache_config` attribute for finer-control of Cache::FastMmap.

  - The `retry_after` attribute default comes from the `cache_config` `expire_time` setting.

  [Bug Fixes]
  - Use shared cache when running on a forking server that does not initialise the cache before forking (GH#7).

  [Documentation]
  - Documented when `retry_after` was added.

  [Tests]
  - Removed .proverc and moved settings directly into GitHub Actions.

  - Added test for subnet override behaviour.

  [Toolchain]
  - Removed use of Dist::Zilla::Plugin::Generate::ManifestSkip.

v0.5.6    2023-12-05 09:30:16+00:00 Europe/London (TRIAL RELEASE)
  [Bug Fixes]