@@ -65,6 +65,17 @@ x_authority = cpan:RRWO
 
 [InstallGuide]
 
+[Prereqs / BuildRequires ]
+-phase = build
+-relationship = requires
+ExtUtils::MakeMaker = 7.22
+Module::Metadata = 1.000015
+
+[Prereqs / DevelopRequires ]
+-phase = develop
+-relationship = requires
+Test::CVE = 0.08
+
 [Prereqs / TestRequires ]
 Cache::FastMmap = 1.52
 Plack::Middleware::ContentLength = 0
